--- a/nablaweb/templates/events/event_detail.html
+++ b/nablaweb/templates/events/event_detail.html
@@ -74,9 +74,9 @@
 <div class="well" style="padding: 8px 0;">
     <ul class="nav nav-list">
         <li class="nav-header">Admin</li>
-        <li><a href="{% url event_admin event.id %}"><i class="icon-glass"></i> Administrer</a></li>
-        <li><a href="{% url admin:events_event_change event.id %}"><i class="icon-pencil"></i> Endre</a></li>
-        <li><a href="{% url admin:events_event_delete event.id %}"><i class="icon-trash"></i> Slett</a></li>
+        <li><a href="{% url event_admin event.id %}"><i class="icon-user"></i> Administrer påmeldinger</a></li>
+        <li><a href="{% url admin:events_event_change event.id %}"><i class="icon-pencil"></i> Endre arrangement</a></li>
+        <li><a href="{% url admin:events_event_delete event.id %}"><i class="icon-trash"></i> Slett arrangement</a></li>
     </ul>
 </div>
 {%endif%}
