--- a/static/css/default.css
+++ b/static/css/default.css
@@ -217,33 +217,6 @@
         width: 75%;
     }
 
-/* bargrafer fra http://djangosnippets.org/snippets/44/ */
-
-    ul.bargraph {
-        margin: 0;
-        padding: 0;
-        width: 190px;
-        background-color: #fff;
-    }
-      
-    ul.bargraph li {
-        font-size: 11px;
-        line-height: 20px;
-        margin: 0;
-        padding: 0;
-        list-style-type: none;
-        border-bottom: 1px solid #ebeff2;
-        background-color: #fff;
-    }
- 
-    ul.bargraph li span {
-        background-color: #a9d2f2;
-        display: block;
-        color: #125a95;
-        font-weight: bold;
-        padding: 0 0 0 5px;
-        white-space: nowrap;
-    }
 
 /* for logo + søkefelt i headeren */
 
@@ -255,8 +228,6 @@
         margin-top: 0px;
     }
 
-
-
     form#searchtop {
         margin-bottom: 0px;
         margin-top: 19px; /* Logohøyde minus høyden på formen */
@@ -265,3 +236,25 @@
 /* Endringer i Bootstrap-farger */
 .navbar-inner {border: 1px solid #c0c0c0;}/* Navbar border */
 .navbar .nav > li > a { color: #555;}/* Navbar link color */
+
+/* News */
+
+    /* Poll */
+    .poll .choice {
+        margin-bottom: 5px;
+    }
+
+    .poll .progress {
+        background-image: -webkit-linear-gradient(top, #ececec, white);
+        background-image: -o-linear-gradient(top, #ececec, white);
+        background-image: -moz-linear-gradient(linear, 0 0, 0 100%, from(#ececec), to(white));
+        background-image: linear-gradient(to bottom, #ececec, white);
+        box-shadow: inset 0 1px 0 rgba(0,0,0,0.2);
+    }
+
+    .bar .percent.zero {
+        color: #999;
+        padding-left: 5px;
+    }
+
+    .poll form { margin-bottom: 0; }
