--- a/static/css/default.css
+++ b/static/css/default.css
@@ -10,6 +10,10 @@
         border-bottom: 1px solid black;
         padding-bottom: 40px;
         padding-top: 20px;
+        padding-right: 20px;
+        padding-left: 20px;
+        margin-right: -20px;
+        margin-left: -20px;
     }
 
 
