Lagt til viewport-størrelse i head, for mobile browsere
Dette bør teoretisk gjøre slik at mobilen rendrer nettsiden med mobilens
skjermbredde, slik som det skal være.

--- a/nablaweb/templates/base_site.html
+++ b/nablaweb/templates/base_site.html
@@ -13,6 +13,7 @@
     <meta name="author" content="Nabla">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="robots" content="noindex, nofollow">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0"><!-- for mobile browsere + bootstrap -->
 
     <!-- Styles -->
     <link href="{{ STATIC_URL }}css/bootstrap.css" rel="stylesheet"><!--Dont modify-->
