--- a/nablaweb/templates/news/news_list.html
+++ b/nablaweb/templates/news/news_list.html
@@ -1,4 +1,5 @@
 {% extends "base.html" %}
+{% load cache %}
 
 {% block title %}Nyheter{% endblock %}
 
@@ -7,7 +8,7 @@
 {% endblock %}
 
 {% block content %}
-
+{% cache 300 news_list %}
 <div class="row">
 {% include "news/news_summary_include.html" with news=featured_news %}
 </div>
@@ -45,7 +46,7 @@
         </ul>
     </div>
 {% endif %}
-
+{% endcache %}
 {% endblock content %}
 
 
@@ -61,6 +62,7 @@ som foregår.</p>
 
 <p>Dette er en <b>beta</b>-versjon av nettsiden, og er kun tilgjengelig for utviklerne. Du ser kanskje etter <a href="http://nabla.no/">Nabla.no</a>?</p>
 
+{% cache 300 upcoming_events %}
 {% if upcoming_events %}
 
     <h3>Kommende arrangement</h3>
@@ -85,6 +87,7 @@ som foregår.</p>
     </div><!-- end kommende arrangement -->
 
 {% endif %}
+{% endcache %}
 
 {% endblock sidebar %}
 
