--- a/nablaweb/templates/news/poll_include.html
+++ b/nablaweb/templates/news/poll_include.html
@@ -1,13 +1,15 @@
 {% load humanize %}{# widthratio #}
+{% load cache %}
 
 {% if poll %}
 <br>
 <div class="poll well hidden-phone">
 
     <h4>{{ poll.question }}</h4>
-
+    {% cache 1800 poll_has_voted %}
     {% if user in poll.users_voted.all %}
         {# Has voted, display results #}
+        {% cache 900 poll_results %}
         {% for choice in poll.choice_set.all %}
             <div class="choice">{{ choice.choice }}</div>
             <div class="progress">
@@ -18,8 +20,9 @@
                 </div>
             </div>
         {% endfor %}
-
+        {% endcache %}{# Poll results #}
     {% else %}
+        {% cache 1800 poll_form %}
         {# Has not voted, display form #}
         <form action="{% url poll.views.vote poll.id %}?next={% url news_list %}" method="post">
             {% csrf_token %}
@@ -35,6 +38,8 @@
             <div class="center" style="color:#999;">Logg inn for å stemme</div>
             {% endif %}
         </form>
+        {% endcache %}{# poll_form #}
     {% endif %}
+    {% endcache %} {# poll_has_voted #}
 </div>
 {% endif %}{# poll #}
