--- a/static/css/default.css
+++ b/static/css/default.css
@@ -265,3 +265,12 @@
     }
 
     .poll form { margin-bottom: 0; }
+
+.navbar .nav > li > a {
+  float: none;
+  padding: 10px 14px 10px;
+  color: #777777;
+  text-decoration: none;
+  text-shadow: 0 1px 0 #ffffff;
+}
+
