--- a/nablaweb/templates/irc/default.html
+++ b/nablaweb/templates/irc/default.html
@@ -9,13 +9,15 @@
     <h3>Nabla-chat</h3>
     <p>Her kan du koble til Nablas chattekanal på IRC-nettverket FreeNode.</p>
     <p>Når du er logget på er det flere kommandoer du kan bruke:</p>
-    <ul><li><em>/nick &lang;nytt kallenavn&rang;</em> (endrer kallenavn)</li>
-    <li><em>/msg &lang;kallenavn&rang; &lang;melding&rang;</em> (privat melding)</li>
-    <li><em>/join &lang;kanal&rang;</em> (går inn i kanal)</li></ul>
+    <ul><li><em>/nick &lt;nytt kallenavn&gt;</em> (endrer kallenavn)</li>
+    <li><em>/msg &lt;kallenavn&gt; &lt;melding&gt;</em> (privat melding)</li>
+    <li><em>/join &lt;#kanal&gt;</em> (går inn i kanal)</li></ul>
 {% endblock%}
 
 {% block content %}
-    <iframe src="http://gauss.nt.ntnu.no:9090/?channels=nabla&uio=MTE9MjM20f" width="750" height="450"></iframe>
+<iframe 
+  src="http://gauss.nt.ntnu.no:9090/?{% if user.is_authenticated %}nick={{ user.username }}{% endif %}&prompt=1&channels=nabla&uio=MTE9MjM20f"
+  width="100%" height="450"></iframe>
 {% endblock %}
 
 {% block below_ad %}
