La til mulighet for å deaktivere kommentarer for nyheter/events/jobber.
fix #74

--- a/nablaweb/templates/content/includes/comments.html
+++ b/nablaweb/templates/content/includes/comments.html
@@ -1,5 +1,6 @@
 {% load comments %}
 
+{% if content.allow_comments %}
 {# Comments #}
     {% get_comment_count for content as comment_count %}
 
@@ -15,3 +16,4 @@
         <p class="well">Logg inn for å skrive en kommentar</p>
     {% endif %}
 {# end Comments #}
+{% endif %}
