--- a/nablaweb/templates/news/news_detail.html
+++ b/nablaweb/templates/news/news_detail.html
@@ -24,6 +24,7 @@
 {{ news.lead_paragraph|markdown|wikilinks}}
 {{ news.body|markdown|wikilinks}}
 
+{% if news.allow_comments %}
 {# Comments #}
     {% get_comment_count for news as comment_count %}
 
@@ -39,6 +40,7 @@
         <p class="well">Logg inn for å skrive en kommentar</p>
     {% endif %}
 {# end Comments #}
+{% endif %}
 
 {% endblock %}
 
