Gjort slik at lange ord wrapper om de ikke har plass. fix #94

--- a/static/css/default.css
+++ b/static/css/default.css
@@ -1,6 +1,7 @@
 /* MAIN */
     body { 
         background-color: #000; /* Background-color of footer */
+        word-break: break-word;
     }
 
     /* Div that holds all parts of page except footer */
