--- a/nablaweb/templates/accounts/login.html
+++ b/nablaweb/templates/accounts/login.html
@@ -6,11 +6,13 @@
 {% block content %}
 
 <form method="post" action="/login/?next={{ next }}" />
-    <table>
+    <p><table>
     {% csrf_token %}
     {{ login_form.as_table }}
     </table>
-    <input type="submit" value="Logg inn"/>
+    <input type="submit" value="Logg inn"/></p>
+    
+    <p><a href="{% url password_reset %}">Har du glemt passordet ditt?</a></p>
     
     </form>
 {% endblock %}
