Penere liste over påmeldte ved event_detail

--- a/static/css/default.css
+++ b/static/css/default.css
@@ -29,6 +29,20 @@
     h2 { margin-bottom: 5px; }
     h3 { margin-bottom: 5px; }
 
+    .registrations {
+        margin-top: -5px;
+    }
+
+    .registrations span {
+        margin-left: 3px;
+    }
+
+    .registrations .waiting-place {
+        opacity: 0.5;
+        -moz-opacity: 0.5;
+        -webkit-opacity: 0.5;
+    }
+
 
     /* 172px: magisk nummer, finnes ved tipping */
     .navbar-form { width: 175px; padding-right: 10px; }
