Diverse endringer i jobs og com

--- a/nablaweb/templates/jobs/info_include.html
+++ b/nablaweb/templates/jobs/info_include.html
@@ -34,7 +34,7 @@
     
     {% if job.deadline_date %}
     <tr>
-        <td>Søkefrist</td>
+        <td>Søknadsfrist</td>
         <td>
             <time datetime="{{ job.deadline_date|date:"c" }}">
                 <strong>{{ job.deadline_date|naturalday }} kl. {{ job.deadline_date|date:"H:i" }}</strong>
