--- a/nablaweb/templates/jobs/jobs_list.html
+++ b/nablaweb/templates/jobs/jobs_list.html
@@ -1,5 +1,6 @@
 {% extends "base.html" %}
 {% load markup %}
+{% load humanize %}
 {% load jobs_filters %}
 
 {% block title %}Stillingsannonser{% endblock %}
