--- a/nablaweb/templates/accounts/view_member_profile.html
+++ b/nablaweb/templates/accounts/view_member_profile.html
@@ -11,8 +11,11 @@
 <div class="row">
     <div class="span2">
         <div class="thumbnail">
-            <img alt="avatar" src="{% thumbnail user.userprofile.avatar 150x150 %}" 
-              width = "150" height ="150" >
+              {% if user.userprofile.avatar %}
+              <img alt="avatar" src="{% thumbnail user.userprofile.avatar 150x150 %}" width = "150" height ="150" >
+              {% else %}
+              <img alt="avatar" src="{{ STATIC_URL }}img/default_avatar.png" width = "150" height ="150" >
+              {%endif %}
         </div>
     </div>
     <div class="span6">
