--- a/nablaweb/templates/base_site.html
+++ b/nablaweb/templates/base_site.html
@@ -107,7 +107,7 @@
                     <ul class="dropdown-menu" >
                         <li><a href="/forum">Forum</a></li>
                         <li><a href="{% url irc %}">Chat</a></li>
-                        <li><a href="{% url gallery.views.index %}">Galleri</a></li>
+                        {# <li><a href="{% url gallery.views.index %}">Galleri</a></li> #}
                         <li><a href="{% url accounts.views.list %}">Medlemsliste</a></li>
                     </ul>
                 </li>
