Nabla har ny adresse. Byttet til den nye adressen.

--- a/nablaweb/templates/base_site.html
+++ b/nablaweb/templates/base_site.html
@@ -295,8 +295,8 @@
 
             <address>
                 Nabla <br>
-                NT-fakultetet <br>
-                Realfagbygget, NTNU <br>
+                Kjemiblokk 2 <br>
+                Sem Sælands vei 10, NTNU <br>
                 N-7491 Trondheim <br>
                 Norway
             </address>
