--- a/nablaweb/templates/jobs/sidebar_include.html
+++ b/nablaweb/templates/jobs/sidebar_include.html
@@ -1,5 +1,10 @@
 {% load humanize %}
 
+<p>Se stillingsannonser relevant for {% for year in years %}<a href="{% url relevant_for_year_list year=year.year %}">{{ year.long_name }}</a>, {% endfor %}
+{% for choice in choices %}<a href="{% url relevant_for_linje_list linje=choice.studieretning %}">{{ choice.studieretning }}</a>{% if not forloop.last %}, {% endif %}{% endfor %}</p>
+
+<p>Se stillingsannonser tagget med {% for tag in tags %}<a href="{% url tag_list tag=tag.tag %}">{{ tag.tag }}</a>{% if not forloop.last %}, {% endif %}{% endfor %}</p>
+
 <h3>Vil du ha stillingsannonsen din her?</h3>
 <p>Ønsker bedriften din å legge ut en stillingsannonse på denne siden, ta kontakt med Bedriftskontakten Nabla på <a href="mailto:bedkom@nabla.ntnu.no">
 bedkom@nabla.ntnu.no.</a></p>
