--- a/nablaweb/templates/news/news_detail.html
+++ b/nablaweb/templates/news/news_detail.html
@@ -14,6 +14,8 @@
 
 {% endblock %}
 
+{% block title %}{{ news.headline }}{% endblock %}
+
 {% block content %}
 
 {% include "news/includes/text_content.html" %}
