Endret utseende på jobs og gjorde om overskriftene utenom hovedelementet til h3.
Passer bedre med størrelsen på nyhetselementene. Overskriftene til de mindre
elementene trenger dessuten ikke like mye oppmerksomhet som hovedelementet.

--- a/nablaweb/templates/jobs/jobs_list.html
+++ b/nablaweb/templates/jobs/jobs_list.html
@@ -19,7 +19,10 @@
         <div class="row">
 	    {% for job in row %}
 	        {% include "jobs/jobs_summary_include.html" %}
-	    {% endfor %}
+            {% endfor %}
+            <div class="rowfooter">
+
+            </div>
         </div>
         <hr>
     {% endfor %}
