--- a/nablaweb/templates/jobs/info_include.html
+++ b/nablaweb/templates/jobs/info_include.html
@@ -18,7 +18,7 @@
                 {% if job.company.website %}
                 <li><a href="{{ job.company.website }}">Nettside</a></li>
                 {% endif %}
-                <li><a href="{% url company_detail job.company.id "" %}">Alle stillingsannonser</a></li>
+                <li><a href="{% url company_detail slug=job.company.name %}">Alle stillingsannonser</a></li>
             </ul>
         </td>
     </tr>
