--- a/nablaweb/templates/jobs/jobs_summary_include.html
+++ b/nablaweb/templates/jobs/jobs_summary_include.html
@@ -5,10 +5,10 @@
 {% load jobs_filters %}
 
 <div class="span4 news_item advert">
-	<h2>{{ job.headline }} (<a href="{{job.company.get_absolute_url }}">{{ job.company.name }}</a>)</h2>
-	{{ job.lead_paragraph|markdown }}
-        <div class="advert_footer"><p><a class="btn" href="{{ job.get_absolute_url }}">Les mer &raquo;</a></p>
-	<p><small>Relevant for {{ job.relevant_for_group.all|commas_no }} (årskull: 
-                {{ job.relevant_for_year.all|commas_no }}). {% if job.deadline_date %}<br>Søknadsfrist 
-                {{ job.deadline_date|naturalday }} kl. {{ job.deadline_date|date:"H:i" }}.{% endif %}</small><br></p></div>
+	<h3>{{ job.headline }}</h3>
+        {{ job.lead_paragraph|markdown }}
+        <p><small>Stillingsannonsen er relevant for årskull {{ job.relevant_for_year.all|commas_no}} ved
+        {{ job.relevant_for_group.all|commas_no }}. {% if job.deadline_date %}Søknadsfristen er {{ job.deadline_date|naturalday}} kl.
+        {{ job.deadline_date|date:"H:i" }}.{% endif %}</small></p>
+        <p><a class="btn" href="{{ job.get_absolute_url }}">Les mer &raquo;</a></p>
 </div>
