--- a/nablaweb/templates/news/news_summary_include.html
+++ b/nablaweb/templates/news/news_summary_include.html
@@ -15,7 +15,7 @@
         </a>
     {% endif %}
 
-    <h2>{{ news.headline }}</h2>
+    {% if narrow %}<h3>{% else %}<h2>{% endif %}{{ news.headline }}{% if narrow %}</h3>{% else %}</h2>{% endif %}
     {{ news.lead_paragraph|markdown|wikilinks}}
 
         <p><a class="btn" href="{{ news.get_absolute_url }}">Les mer &raquo;</a></p>
