--- a/nablaweb/templates/events/event_administer.html
+++ b/nablaweb/templates/events/event_administer.html
@@ -36,13 +36,21 @@
     {% for registration in regs %}
     {% if registration.is_attending_place %}
     <tr bgcolor="#00FF00">
-    {% else %}{% if registration.is_waiting_place %}
-    <tr bgcolor="#FFFF00">
-    {% endif %}{% endif %}
-      <td>{{ forloop.counter }} ({{ registration.number }})</td>
+      <td>{{ registration.number }}</td>
       <td>{{ registration.user }}</td>
       <td><input type="checkbox" name="user" value="{{ registration.user }}" /></td>
     </tr>
+    {% endif %}
+    {% endfor %}
+
+    {% for registration in regs %}
+    {% if registration.is_waiting_place %}
+    <tr bgcolor="#FFFF00">
+      <td>{{ registration.number }}</td>
+      <td>{{ registration.user }}</td>
+      <td><input type="checkbox" name="user" value="{{ registration.user }}" /></td>
+    </tr>
+    {% endif %}
     {% endfor %}
   </table>
   {% else %}
