Lagt til title på komite-ikonene i brukerlisten / fix #118

--- a/nablaweb/templates/accounts/list.html
+++ b/nablaweb/templates/accounts/list.html
@@ -42,7 +42,7 @@
             <td class="cell_groups"> 
             {# Grupper brukeren er med i #}
                 {% for group in user.groups.all %}
-                <img alt="{{ group.name }}" src="{{ STATIC_URL }}img/komite-ikon/{{ group.name|lower }}.png" />
+                <img alt="{{ group.name }}" title="{{ group.name }}" src="{{ STATIC_URL }}img/komite-ikon/{{ group.name|lower }}.png" />
                 {% endfor %}
             </td>
 
