--- a/nablaweb/templates/news/news_summary_include.html
+++ b/nablaweb/templates/news/news_summary_include.html
@@ -5,12 +5,12 @@
 
 
 <div class="span{% if narrow %}4{% else %}8{% endif %} news_item {{ news.content_type.model }}">
-    {% if news.picture %}
+    {% if news.as_child_class.correct_picture %}
         <a href="{{ news.get_absolute_url }}">
         {% if narrow %}
-            <img alt="" width="100%" src="{% thumbnail news.picture 370x123 box=news.cropping %}">
+            <img alt="" width="100%" src="{% thumbnail news.as_child_class.correct_picture 370x123 box=news.as_child_class.correct_cropping %}">
         {% else %}
-            <img alt="" width="100%" src="{% thumbnail news.picture 770x250 box=news.cropping %}">
+            <img alt="" width="100%" src="{% thumbnail news.as_child_class.correct_picture 770x250 box=news.as_child_class.correct_cropping %}">
         {% endif %}
         </a>
     {% endif %}
