Endra sånn at kommentarar kan førehandsvisast.
Fiksa sånn at avatarane til dei enkelte medlemmene visast på profilen deira og ikkje avataren til innlogga brukar.

--- a/nablaweb/templates/comments/preview.html
+++ b/nablaweb/templates/comments/preview.html
@@ -1,6 +1,7 @@
 {% extends "comments/base.html" %}
 {% load i18n %}
 {% load mediawiki_links %}
+{% load thumbnail %}
 
 {% block title %}{% trans "Preview your comment" %}{% endblock %}
 
