--- a/nablaweb/templates/accounts/edit_profile.html
+++ b/nablaweb/templates/accounts/edit_profile.html
@@ -6,7 +6,11 @@
 <div class="row">
     <div class="span2 centertext">
         <div class="thumbnail">
-            <img alt="avatar" src="{% thumbnail user.userprofile.avatar 150x150 %}" width = "150" height ="150" >
+            {% if user.userprofile.avatar %}
+                <img alt="avatar" src="{% thumbnail user.userprofile.avatar 150x150 %}" width = "150" height ="150" >
+            {% else %}
+                <img alt="avatar" src="{{ STATIC_URL }}img/default_avatar.png" width = "150" height ="150" >
+            {%endif %}
         </div>
     </div>
 
