--- a/nablaweb/templates/comments/list.html
+++ b/nablaweb/templates/comments/list.html
@@ -10,8 +10,8 @@
 <div class="row comment" id="c{{ comment.id }}">
 
             <div class="avatar span1">
-              {% if user.userprofile.avatar %}
-              <img alt="avatar" src="{% thumbnail user.userprofile.avatar 150x150 %}" width = "150" height ="150" >
+              {% if comment.user.userprofile.avatar %}
+              <img alt="avatar" src="{% thumbnail comment.user.userprofile.avatar 150x150 %}" width = "150" height ="150" >
               {% else %}
               <img alt="avatar" src="{{ STATIC_URL }}img/default_avatar.png" width = "150" height ="150" >
               {%endif %}
