--- a/nablaweb/templates/search/search.html
+++ b/nablaweb/templates/search/search.html
@@ -5,7 +5,8 @@
 
     <form method="get" action="." class="form-search">
         <div style="margin-top: 15px; margin-bottom: 20px;"><div class="input-append"><input type="text" name="q" id="id_q" class="search-query" style="width:
-                25em;" placeholder="Søk..."/>&nbsp;<button type="submit" class="btn" value="Søk"><i class="icon-search"></i></button></div></div>
+                25em;" placeholder="{% if not query %}Søk...{% else %}{% endif %}" {% if query %}value="{{ query }}"{% endif %}/>&nbsp;
+                <button type="submit" class="btn" value="Søk"><i class="icon-search"></i></button></div></div>
 
         <h2>Søkeresultater</h2>
 
