--- a/nablaweb/templates/base_site.html
+++ b/nablaweb/templates/base_site.html
@@ -218,52 +218,26 @@
     
 
     <aside class="span4">{# sidebar #}
-        
-        <h3>Synlige klasser</h3>
-        <code class="visible-phone">.visible-phone<br></code>
-        <code class="visible-tablet">.visible-tablet<br></code>
-        <code class="visible-desktop">.visible-desktop<br></code>
-        <code class="hidden-phone">.hidden-phone<br></code>
-        <code class="hidden-tablet">.hidden-tablet<br></code>
-        <code class="hidden-desktop">.hidden-desktop<br></code>
 
         {% block sidebar %}
-            <h3>Jeg er tom</h3>
-            <p>Denne blokken inneholder ikke noe nyttig. 
-               Hva med å sette den til et tomt innhold, eller putte noe nyttig her?</p>
+            <!--sidebar er tom-->
         {% endblock sidebar %}
 
 
         <!-- reklame -->
         {% block ad %}
-            <div class="box hidden-phone">
-                <img src="http://lorempixel.com/362/200/technics/1/Reklame" class="ad wide" alt="Reklame">
-            </div>
-
-            <div class="box">
-                <img src="http://lorempixel.com/362/100/technics/2/Reklame" class="ad wide" alt="Reklame">
+            <div class="ad box hidden-phone">
+                <p>Kaffetørste Nablakomponenter blir sponset med kaffe av</p>
+                <div class="center">
+                    <a href="http://www.kjeldsberg.no/">
+                        <img src="{{ STATIC_URL }}img/kjeldsberg_logo.jpg">
+                    </a>
+                </div>
             </div>
         {% endblock ad %}
 
 
         {% block below_ad %}
-            <h3>Liste over blocks</h3>
-            <dl>
-                <dt>content</dt>
-                <dd>Innholdet til venstre</dd>
-
-                <dt>main</dt>
-                <dd>content og hele sidebaren</dd>
-
-                <dt>sidebar</dt>
-                <dd>Alt over reklamen</dd>
-
-                <dt>ad</dt>
-                <dd>Reklamen</dd>
-
-                <dt>below_ad</dt>
-                <dd>Alt under reklamen (denne teksten)</dd>
-            </dl>
         {% endblock %}
 
 
